Auth用戶認證大致OK。  (缺：更新跟刪除帳戶要驗證密碼)
