# docs/swagger.yaml
@@ -437,6 +437,130 @@ paths:
           schema:
             $ref: '#/definitions/errcode.Error'
       summary: 更新標籤
+  /auth:
+    delete:
+      parameters:
+      - description: UUID或使用者名稱
+        in: body
+        maxLength: 255
+        name: uuid
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 請求錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 內部錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 刪除使用者
+    put:
+      parameters:
+      - description: UUID或使用者名稱
+        in: body
+        maxLength: 255
+        name: uuid
+        required: true
+        schema:
+          type: string
+      - description: 密碼
+        in: body
+        maxLength: 255
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 請求錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 內部錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 更新使用者
+  /auth/new:
+    post:
+      parameters:
+      - description: UUID或使用者名稱
+        in: body
+        maxLength: 255
+        name: uuid
+        required: true
+        schema:
+          type: string
+      - description: 密碼
+        in: body
+        maxLength: 255
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 請求錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 內部錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 新增使用者
+  /auth/verify:
+    post:
+      parameters:
+      - description: UUID或使用者名稱
+        in: body
+        maxLength: 255
+        name: uuid
+        required: true
+        schema:
+          type: string
+      - description: 密碼
+        in: body
+        maxLength: 255
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功。 回傳JWT token
+          schema:
+            type: string
+        "400":
+          description: 請求錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 內部錯誤
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 驗證使用者
   /upload/file:
     post:
       parameters:
